alignment fix

--- a/src/app/webex-layout/space-list/space-list.component.scss
+++ b/src/app/webex-layout/space-list/space-list.component.scss
@@ -16,6 +16,30 @@
     border-top: 1px solid rgba(91, 91, 91, 0.5)
 }
 
+.space-name {
+  font-size: 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-decoration: none;
+  min-width: 200px;
+  max-width: 200px;
+  padding-left: 10px;
+  text-transform: none;
+}
+.webex-sidebar{
+  max-width: 275px;
+  overflow: hidden;
+}
+.circle-profile {
+    line-height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    font-size: 10px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+}
 .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -35,10 +59,12 @@
     border-color: #b5b5b5;
 }
 .profile-card{
+    display: inline-block;
+    width: 220px;
     cursor: pointer;
     height: 40px;
     padding: 7px;
-    margin: 10px;
+    margin-left: 10px;
     text-overflow: ellipsis;
     overflow: hidden; 
     white-space: nowrap;
@@ -119,7 +145,6 @@
 .profile-card:hover {
     background-color: #653f91;
     color:#fff;
-    font-weight: bold;
     transition: 1s;
 }
 
@@ -138,6 +163,7 @@
     cursor: pointer;
 }
 .card-list{
+    padding-top: 10px;
     position: relative;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -146,4 +172,9 @@
 }
 .filter-active {
     font-weight: bold;
+}
+.avatar-small-list{
+    width: 65%;
+    height: 80%;
+    font-size: 10px;
 }
